--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -4,10 +4,13 @@
 <html>
 
   <head>
-	<!-- Bootstrap CSS -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	
-	<link rel="stylesheet" href="{% static 'stylesheets/page.css' %}" type="text/css">
+	  <link rel="stylesheet" href="{% static 'stylesheets/page.css' %}" type="text/css">
     <title>
       Block
         {% block title_block %}
