--- a/backend/templates/event.html
+++ b/backend/templates/event.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-{% load static %}
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'css/page.css' %}">
-    </head>
+{% extends 'base.html' %}
 
-    <body>
-        <div class="main-container">
-            hello there
-        </div>
-    </body>
-</html>
+{% block title_block %}
+Event
+{% endblock %}
+
+{% block body_block %}
+Hello World
+{% endblock %}
