--- a/backend/templates/event.html
+++ b/backend/templates/event.html
@@ -4,6 +4,14 @@
 Event
 {% endblock %}
 
+
+
 {% block body_block %}
-Hello World
+<div id="title-div">
+    <h1 id="title">Lunchbox</h1>
+</div>
+
+<div class="main-container">
+    <h1>Event</h1>
+</div>
 {% endblock %}
