--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -4,15 +4,15 @@
 <html>
 
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'stylesheets/page.css' %}" type="text/css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	  <link rel="stylesheet" href="{% static 'stylesheets/page.css' %}" type="text/css">
+    
     <title>
-      Block
         {% block title_block %}
           Base case
         {% endblock %}
@@ -20,6 +20,7 @@
   </head>
   
   <body>
+    <!--
 	  <nav class="navbar navbar-expand-lg navbar navbar-fixed-top">
 		<div class="float-left">
 		{% block nav_block_left %}
@@ -31,11 +32,9 @@
 			{% endblock %}
 		</ul>
 		
-	  </nav>
+	  </nav> -->
+        {% block body_block %}
+        {% endblock %}
 
-
-      {% block body_block %}
-        Base case
-      {% endblock %}
   </body>
 </html>
