--- a/backend/templates/event.html
+++ b/backend/templates/event.html
@@ -6,12 +6,10 @@ Event
 
 
 
-{% block body_block %}
-<div id="title-div">
-    <h1 id="title">Lunchbox</h1>
-</div>
 
-<div class="main-container">
+{% block body_block %}
+
+<div class="rounded" id="main-container">
     <h1>Event</h1>
 </div>
 {% endblock %}
