--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -5,7 +5,7 @@
 
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'stylesheets/page.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/page.css' %}" type="text/css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -20,9 +20,9 @@
   </head>
   
   <body>
-    <!--
 	  <nav class="navbar navbar-expand-lg navbar navbar-fixed-top">
 		<div class="float-left">
+        <h1> Lunch Box </h1>
 		{% block nav_block_left %}
 		{% endblock %}
 		</div>
@@ -32,7 +32,7 @@
 			{% endblock %}
 		</ul>
 		
-	  </nav> -->
+	  </nav>
         {% block body_block %}
         {% endblock %}
 
