added logo to nav

--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -23,6 +23,16 @@ canvas {
     text-align: center;
 }
 
+#logo {
+    width:190px;
+    height:auto;
+}
+
+#main-nav{
+    background-color: white;
+    margin-bottom:25px;
+}
+
 #title {
     color: white;
 }
