--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -20,9 +20,9 @@
   </head>
   
   <body>
-	  <nav class="navbar navbar-expand-lg navbar navbar-fixed-top">
+	  <nav class="navbar navbar-expand-lg navbar navbar-fixed-top" id="main-nav">
 		<div class="float-left">
-        <h1> Lunch Box </h1>
+        <img src="{% static 'img/logo.png' %}" alt="Lunch Box" id="logo">
 		{% block nav_block_left %}
 		{% endblock %}
 		</div>
