base changes templates

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -33,8 +33,10 @@
 		</ul>
 		
 	  </nav>
+
+      <div class="rounded" id="main-container">
         {% block body_block %}
         {% endblock %}
-
+      </div>
   </body>
 </html>
