--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -30,7 +30,7 @@ canvas {
 
 #main-nav{
     background-color: white;
-    
+
     margin-bottom:25px;
 }
 
@@ -43,6 +43,7 @@ canvas {
     color: brown;
     background-color:#E2DDAA;
     font-size: 100px;
+    margin:20px;
 }
 
 
