Started working on forms

--- a/backend/templates/create_event.html
+++ b/backend/templates/create_event.html
@@ -12,14 +12,16 @@ Create Event
                 <!--Relies on user model-->
                 <p class="text-white m-0">
                     Hi {{ user.username }}! </p>
-                    Create a new {{ category.name }} recipe here.
+                    Create a new event here.
                 </p>
                 <p>
+                    <!--
                     <a class="btn btn-primary" href="{% url 'ratemyrecipeapp:account' %}">Go to my account</a>
+                    -->
                 </p>
               
 
-        <form id="RecipeForm" role="form" method='POST'enctype="multipart/form-data">
+        <form id="EventForm" role="form" method='POST'enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
             <div class="form-group">
