--- a/backend/templates/event.html
+++ b/backend/templates/event.html
@@ -4,10 +4,61 @@
 Event
 {% endblock %}
 
-
-
-
 {% block body_block %}
+<div id="title-div">
+    <h1 id="title">Lunchbox</h1>
+</div>
 
+<div class="main-container">
     <h1>Event</h1>
+    <div id="event-wrapper">
+        <div id="event-title">'''even.title''' {{ event.title }}</div>
+
+        <div id="event-details">
+            <h3>Details</h3>
+            <p>Time: '''event.time''' {{ event.time }}</p>
+            <p>Theme: '''event.theme''' {{event.theme }}</p>
+            <p>Budget: '''event.budget''' {{ event.budget }}</p>
+        </div>
+
+        <div id="opt-in">
+            <h5>Are you participating?</h5>
+            {% if user.opt %}
+                <input type="radio" id="in" value="Opt In" checked>
+                <label for="huey">Opt In</label>
+                <input type="radio" id="in" value="Opt Out">
+                <label for="huey">Opt In</label>
+            {% else %}
+                <input type="radio" id="in" value="Opt In">
+                <label for="huey">Opt In</label>
+                <input type="radio" id="in" value="Opt Out" checked>
+                <label for="huey">Opt In</label>
+            {% endif %}
+        </div>
+
+        <div id="opt-theme">
+            <h5>Would you like food from the theme?</h5>
+            {% if user.themed %}
+                <input type="radio" id="in" value="Opt In" checked>
+                <label for="huey">Yes</label>
+                <input type="radio" id="in" value="Opt Out">
+                <label for="huey">Opt In</label>
+            {% else %}
+                <input type="radio" id="in" value="Opt In">
+                <label for="huey">Opt In</label>
+                <input type="radio" id="in" value="Opt Out" checked>
+                <label for="huey">Opt In</label>
+            {% endif %}
+        </div>
+
+        <div id="food-purchase">
+            Have you bought your food
+            Link to nearby restaurants
+        </div>
+
+        <div id="buying-for">
+            <h4>You are buying for</h4>
+        </div>
+    </div>
+</div>
 {% endblock %}
