--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -22,10 +22,12 @@
   <body>
 	  <nav class="navbar navbar-expand-lg navbar navbar-fixed-top" id="main-nav">
 		<div class="float-left">
+        <a href="{% url 'backend_app:index' %}">
         <img src="{% static 'img/logo.png' %}" alt="Lunch Box" id="logo">
 		{% block nav_block_left %}
 		{% endblock %}
 		</div>
+        </a>
 		
 		<ul class="navbar-nav ml-auto">
 			{% block nav_block_right %}
