--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -1,6 +1,5 @@
 
 body {
-    overflow: hidden;
     margin: 0;
     background-color: #DA7A7A;
 }
@@ -10,6 +9,8 @@ canvas {
     margin-left: 0;
     margin-bottom: 0;
 }
+
+
 
 #title-div {
     display: block;
@@ -40,10 +41,23 @@ canvas {
 
 
 #main-container {
-    color: brown;
     background-color:#E2DDAA;
     font-size: 100px;
     margin:20px;
+    padding:10px;
+}
+
+#no-members-msg{
+    font-size: 30px;
+}
+
+
+
+#small-event-block{
+    background-color:#AFE1AF;
+    padding:40px;
+    text-align: center;
+    margin:15px;
 }
 
 
