--- a/backend/templates/my_account.html
+++ b/backend/templates/my_account.html
@@ -16,38 +16,16 @@ My Account
 			<p>
                 <h1>{{ user.username }}!</h1>
 			</p>
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="/media/{{ userProfile.profile_picture }}" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">
+            <img class="img-fluid rounded mb-4 mb-lg-0" src="/media/{{ u.profile_picture }}" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">
             <p>
-                <h2>{{ userProfile.address }}</h2>
+                <h2>{{ u.address }}</h2>
             </p>
             <p>
-                <h2>{{ userProfile.dietary_info }}</h2>
+                <h2>{{ u.dietary_info }}</h2>
             </p>
             <p>
-                <h2>{{ userProfile.likes_and_dislikes }}</h2>
+                <h2>{{ u.likes_and_dislikes }}</h2>
             </p>
-            <p>
-                <h2>{{ userProfile.address }}</h2>
-            </p>
-
-
-
-			<div>
-                <p>
-	                <a class="btn btn-primary" href="{% url 'backend_app:my_recipes' %}">My Recipes</a>
-                </p>
-			</div>
-
-            <div>
-                <p>
-                    <a class="btn btn-primary" href="{% url 'backend_app:recipes_ive_rated' %}">My Ratings</a>
-                </p>
-            </div>
-            <div>
-                <p>
-                    <a class="btn btn-primary" href="{% url 'backend_app:logout' %}">Logout</a>
-                </p>
-            </div>
 				
         {% else %}
 				
