--- a/backend/templates/create_event.html
+++ b/backend/templates/create_event.html
@@ -11,24 +11,16 @@ Create Event
             <div class="card-body">
                 <!--Relies on user model-->
                 <p class="text-white m-0">
-                    Hi {{ user.username }}! </p>
-                    Create a new event here.
-                </p>
-                <p>
-                    <!--
-                    <a class="btn btn-primary" href="{% url 'ratemyrecipeapp:account' %}">Go to my account</a>
-                    -->
+                    Create Event
                 </p>
               
 
         <form id="EventForm" role="form" method='POST'enctype="multipart/form-data">
             {% csrf_token %}
-            {% for field in form %}
-            <div class="form-group">
-                {{field.help_text}}
-                {{field}}
-                {{field.errors}}
-            </div>
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
             {% endfor %}
                 <div class="form-group">
                     <div class="col-sm-10">
