--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -50,8 +50,6 @@ canvas {
     font-size: 30px;
 }
 
-
-
 #small-event-block{
     background-color:#AFE1AF;
     padding:40px;
@@ -60,5 +58,7 @@ canvas {
 }
 
 
-
+#event-form {
+    font-size: 20px;
+}
 
