--- a/backend/templates/create_event.html
+++ b/backend/templates/create_event.html
@@ -7,26 +7,21 @@ Create Event
 {% block body_block %}
  <!-- Heading Row -->
         <!-- Call to Action Well -->
-        <div class="card text-white bg-secondary my-5 py-4 text-center">
-            <div class="card-body">
-                <!--Relies on user model-->
-                <p class="text-white m-0">
-                    Create Event
-                </p>
+        <div class="card-body text-center">
+            <!--Relies on user model-->
+            <p class="text-white m-0">
+                Create Event
+            </p>
               
-
-        <form id="EventForm" role="form" method='POST'enctype="multipart/form-data">
+        </br>
+        <form class="text-center" id="event-form" role="form" method='POST'enctype="multipart/form-data">
             {% csrf_token %}
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-                <div class="form-group">
-                    <div class="col-sm-10">
-                        <input type="submit" class="btn btn-primary" name="submit" value="Submit" />
-                    </div>
+            {{ event_form.as_p }}
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <input type="submit" class="btn btn-primary" name="submit" value="Submit" />
                 </div>
+            </div>
         </form>
       	</div>
       </div>
