login/signup buttons added to navbar

--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -62,6 +62,17 @@ canvas {
     margin:15px;
 }
 
+.btn{
+    padding: 20px;
+    background-color:#AFE1AF;
+    margin:auto;
+}
+
+#user-icon{
+    padding:10px;
+    padding-left:50px;
+}
+
 .fas{
     width:200%;
     height:auto;
