--- a/backend/templates/team.html
+++ b/backend/templates/team.html
@@ -11,7 +11,7 @@ Team
         <div class="col">
 
         <div class="rounded" id="small-event-block">
-            <h1>Jimmys Birthday</h1>
+            <h1>{{event}}</h1>
         </div>
 
         <!-- Show the previous events -->
