aesthetic improvement on login/signup pages

--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -9,6 +9,14 @@ canvas {
     margin-bottom: 0;
 }
 
+.card-body{
+    padding:40px;
+    font-size: 20px;
+}
+
+#form-div{
+    background-color:#AFE1AF;
+}
 
 
 #title-div {
