--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -5,8 +5,8 @@ Login
 {% endblock %}
 
 {% block body_block %}
-<div class="card text-white bg-secondary my-5 py-4 text-center">
-			<div class="card-body">
+<div id="form-div" class="card text-white my-5 py-4 text-center">
+	<div class="card-body">
 			<h1 class="font-weight-light">Login</h1>
 
 			<p class="text-white m-0">Welcome back! Please Login!</p>
