--- a/backend/templates/sign_up.html
+++ b/backend/templates/sign_up.html
@@ -9,7 +9,7 @@ Sign Up
 
 
 {% block body_block %}
-<div class="card text-white bg-secondary my-5 py-4 text-center">
+<div id="form-div" class="card text-white my-5 py-4 text-center">
 			<div class="card-body">
 <h1 class="font-weight-light">Sign Up</h1>
 			{% if registered %}
