--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -85,3 +85,20 @@ canvas {
     font-size: 20px;
 }
 
+.restaurant_thumbnail {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+
+}
+
+@media screen and (max-width: 768px) {
+    .restaurant_thumbnail {
+        width: 200px;
+        height: 200px;
+        object-fit:cover;
+    }
+}
+
+
+
