Updated the google maps api

--- a/backend/templates/restaurants.html
+++ b/backend/templates/restaurants.html
@@ -12,7 +12,7 @@ Event
         <div id="restaurants" class="row">
             {% for result in results %} 
             <div class="col">
-                <img class="restaurant_thumbnail" src="{{result.photo}}" />
+                <img class="restaurant_thumbnail img-fluid" src="{{result.photo}}" />
                 <h1 class="restaurant_name">{{result.result.name}}</h1>
             </div>    
             
