--- a/backend/static/css/page.css
+++ b/backend/static/css/page.css
@@ -17,7 +17,24 @@ canvas {
 
 .card-body{
     padding:40px;
+    padding-top:0px;
     font-size: 20px;
+    text-align: center;
+}
+
+.event-block{
+    background-color:#AFE1AF;
+    padding:30px;
+    text-align: center;
+    margin:5px;
+}
+
+#food-purchase{
+    height:100%;
+}
+
+#buying-for{
+    height:100%;
 }
 
 #form-div{
@@ -57,7 +74,8 @@ canvas {
     background-color:#E2DDAA;
     font-size: 100px;
 	margin:auto;
-	padding:60px;
+    margin-bottom: 60px;
+	padding:50px;
 	margin-right:60px;
 	margin-left:60px;
 }
@@ -146,16 +164,15 @@ canvas {
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
-  padding: 20px;
-}
+
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+
 .restaurant_thumbnail {
     width: 400px;
     height: 400px;
