--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -23,7 +23,7 @@
   <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Event</a>
+        <a href="{% url 'backend_app:event' %}">Event</a>
         <a href="#">Services</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
@@ -83,7 +83,7 @@
       <script>
           /* Set the width of the side navigation to 250px */
             function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("mySidenav").style.width = "180px";
             }
 
             /* Set the width of the side navigation to 0 */
