--- a/backend/templates/create_event.html
+++ b/backend/templates/create_event.html
@@ -6,22 +6,20 @@ Create Event
 
 {% block body_block %}
  <!-- Heading Row -->
-        <!-- Call to Action Well -->
-        <div class="card-body text-center">
-            <!--Relies on user model-->
-            <p class="text-white m-0">
-                Create Event
-            </p>     
-
-        <form class="text-center" id="event-form" role="form" method='POST'enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ event_form.as_p }}
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <input type="submit" class="btn btn-primary" name="submit" value="Submit" />
+    <!-- Call to Action Well -->
+    <div class="card-body">
+        <!--Relies on user model-->
+        <p class="text-black m-0 text-center">
+            Create Event
+        </p>
+        <div class="form-group col-md-8">
+            <form id="event-form" role="form" method='POST' action="{% url 'backend_app:create-event' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ event_form.as_p }}
+                <div class="text-center">
+                    <input type="submit" class="btn btn-primary btn-sm" name="submit" value="Submit" />
                 </div>
-            </div>
-        </form>
-      	</div>
-      </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
