--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -27,7 +27,7 @@
         <a href="{% url 'backend_app:event' %}">Event</a>
         <a href="{% url 'backend_app:team' %}">My Team</a>
         <a href="{% url 'backend_app:account' %}">My Account</a>
-        <a href="#">Contact</a>
+        <a href="{% url 'backend_app:restaurants' %}">Restaurants</a>
       </div>
       
 
